Added Memory Allocation options and JMX Configruation